[package]
name = "my_token_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "my_token_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.13"
anchor-lang = "0.29.0"
anchor-spl = {version = "0.29.0", features = ["metadata"]}
sha2-const = "0.1.2"

spl-transfer-hook-interface = "0.4.1"
spl-tlv-account-resolution = "0.5.0"
spl-pod = "0.1.0"
spl-token =	"4.0.0"